mobile version for news

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <h3 class="news-title center-text">News about our Huemul</h3>
             <div class="row padding-news">
                 <div class="col-lg-4">
-                    <div class="card card-news" style="width: 18rem;">
+                    <div class="card card-news" style="max-width: 600px;">
                         <div class="news-image news-image1"></div>
                         <div class="card-body">
                             <h5 class="card-title">Captive breeding employed to rescue Chile's national animal, a shy deer</h5>
@@ -104,7 +104,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="card card-news" style="width: 18rem;">
+                    <div class="card card-news" style="max-width: 600px;">
                          <div class="news-image news-image2"></div>
                         <div class="card-body">
                             <h5 class="card-title">Rare Andean Deer Found in Chile’s Northern Patagonia</h5>
@@ -114,7 +114,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="card card-news" style="width: 18rem;">
+                    <div class="card card-news" style="max-width: 600px;">
                          <div class="news-image news-image3"></div>
                         <div class="card-body">
                             <h5 class="card-title">Virus may have caused mysterious foot disease in Chile’s rare huemul deer</h5>
