mobile version for about and first version of contact us

--- a/index.html
+++ b/index.html
@@ -57,28 +57,92 @@
     <!-- About the Huemul-->
 
     <section class="about-huemul">
-        <h3>The Huemul</h3>
-        <p>The huemul deer <i>(Hippocamelus bisulcus)</i>, also known as the South Andean deer, is the iconic animal of Chile. A huemul even appears alongside the condor in the country’s coat of arms, and they were named a natural national monument in 2006.
-        </p>
-        <p>Once a common inhabitant of both the Chilean and Argentinian sides of the Andean mountain range, huemul territory used to stretch from Santiago right down to the Straits of Aysen and Magellan, but it is now rapidly shrinking. There are an estimated
-            2,000 left in the wild, with roughly 1,500 in Chile, and 500 or so wandering the mountains of Argentina.
-        </p>
-        <p>. Patagonia offers the best chance to spot a South American huemul Although they’re known to inhabit parts of Chile from Chillán southwards, as well as the southwestern stretch of Argentina, your best bet for seeing huemul is along the shores
-            of Lago Cochrane and in Tamango National Reservs Conservacion Patagonica have recently established protected habitats for this endangered species in these regions. The rugged, barely-hospitable terrain of the Andean mountains has required
-            the South Andean huemul to physically adapt to the challenges of its habitat. Occupying areas from sea-level up to 5500 feet (1,700m) of elevation, it has developed short legs and a stocky build to help it climb over this rough terrain. The
-            coloring of its coat also enables it to blend into its surroundings, which are normally forests of southern beech or dense shrubland. The Chile national animal is at risk of extinction Although once prolific throughout the Andean region of
-            Chile and Argentina, the population of South Andean huemul has been dwindling rapidly. Since 1982, it has been registered as endangered on the IUCN Red List of Threatened Species. Estimates suggest thatonly 1500 animals remain, two-thirds
-            of which are thought to reside in Chile. 7. Its predators are responsible for its rapidly declining population Predators of the huemul include pumas, culpeo foxes and domestic dogs. However, by far its most significant predator has been humans.
-            Since settlers arrived in Patagonia in the 19th-century, they have played a fundamental role in seriously reducing the global population of this species. 8. Protecting the South Andean huemul has finally become a priority Argentina has faced
-            extreme criticism for not recognising the potential threat of extinction facing the Chile national animal. It is only since 2010 that both Chile and Argentina have taken to working cooperatively to prevent the tiny population of of South Andean
-            huemul from dwindling any further. Measures aimed at addressing illegal hunting and habitat degradation, amongst other critical threats, have been introduced to tackle the issue, and both countries hope to bring this emblematic creature back
-            from the brink of extinction.
-        </p>
+        <h3 class="h3-title">The Huemul</h3>
+        <div class="container container-about">
+            <div class="row row-about">
+                <div class="col-lg-6 half-text-about">
+                    <p>The huemul deer <i>(Hippocamelus bisulcus)</i>, also known as the South Andean deer, is the iconic animal of Chile. A huemul even appears alongside the condor in the country’s coat of arms, and they were named a natural national monument
+                        in 2006.</p>
+                </div>
+                <div class="half-image-text"></div>
+                <div class="col-lg-6">
+                    <div class="col-12"><img class="half-image" src="./assets/images/about/chile-coat.jpg" alt="Chilean coat of arms" ;>
+                        <p class="half-image-text caption-about">Both animals wear golden naval crowns symbolising the heroic deeds of the Chilean Navy in the Pacific Ocean</p>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="row row-about">
+                <div class="col-12 text-about">
+                    <p>Once a common inhabitant of both the Chilean and Argentinian sides of the Andean mountain range, huemul territory used to stretch from Santiago right down to the Straits of Aysen and Magellan, but it is now rapidly shrinking. There
+                        are an estimated 2,000 left in the wild, with roughly 1,500 in Chile, and 500 or so wandering the mountains of Argentina.
+                    </p>
+                </div>
+            </div>
+
+            <div class="row row-about">
+                <div class="col-lg-6 half-text-about">
+                    <h5>Patagonia offers the best chance to spot a South American huemul.</h5>
+                    <p> Although they’re known to inhabit parts of Chile from Chillán southwards, as well as the southwestern stretch of Argentina, your best bet for seeing huemul is along the shores of Lago Cochrane and in Tamango National Reservs Conservacion
+                        Patagonica have recently established protected habitats for this endangered species in these regions.
+                        <br> The rugged, barely-hospitable terrain of the Andean mountains has required the South Andean huemul to physically adapt to the challenges of its habitat. Occupying areas from sea-level up to 5500 feet (1,700m) of elevation,
+                        it has developed short legs and a stocky build to help it climb over this rough terrain.</p>
+                </div>
+                <div class="col-lg-6">
+                    <div class="col-12"><img class="half-image" src="./assets/images/about/about3.jpg" alt="Chilean coat of arms" ;>
+                        <p class="half-image-text caption-about">A mother Huemul with her fawn in Tamango National Park, Aysen, Chile.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row row-about">
+                <div class="col-12 text-about">
+                    <h5> The Chile national animal is at risk of extinction.</h5>
+                    <p>Although once prolific throughout the Andean region of Chile and Argentina, the population of South Andean huemul has been dwindling rapidly.
+                        <br> Since 1982, it has been registered as endangered on the IUCN Red List of Threatened Species. Estimates suggest thatonly 1500 animals remain, two-thirds of which are thought to reside in Chile.</p>
+                </div>
+                <div class="col-12"><img class="full-image caption-about" src="./assets/images/about/about4.jpg" alt="Huemul is an endangered animal" ;></div>
+            </div>
+
+
+            <div class="row row-about">
+                <div class="col-lg-6 half-text-about">
+                    <h5>Its predators are responsible for its rapidly declining population</h5>
+                    <p>Predators of the huemul include pumas, culpeo foxes and domestic dogs. However, by far its most significant predator has been humans. Since settlers arrived in Patagonia in the 19th-century, they have played a fundamental role in seriously
+                        reducing the global population of this species.
+                    </p>
+                </div>
+                <div class="col-lg-6 quote-about">
+                    <h4>“If we can teach people about wildlife, they will be touched. Share my wildlife with me. Because humans want to save things that they love".
+                    </h4>
+                    <p>Steve Irwin</p>
+                </div>
+            </div>
+
+            <div class="row row-about">
+                <div class="col-12 text-about">
+                    <h5>Protecting the South Andean huemul has finally become a priority</h5>
+                    <p>Argentina has faced extreme criticism for not recognising the potential threat of extinction facing the Chile national animal. It is only since 2010 that both Chile and Argentina have taken to working cooperatively to prevent the tiny
+                        population of of South Andean huemul from dwindling any further.
+                        <br> Measures aimed at addressing illegal hunting and habitat degradation, amongst other critical threats, have been introduced to tackle the issue, and both countries hope to bring this emblematic creature back from the brink
+                        of extinction.
+
+                    </p>
+                </div>
+                <div class="col-12 full-image embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item caption-about" src="https://www.youtube.com/embed/4mleWMusU7U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></iframe>
+                </div>
+            </div>
+
+
+        </div>
+        </div>
     </section>
 
     <!-- What We do -->
     <section class="what-we-do">
-        <h3>What we do</h3>
+        
+        <h3 class="what-we-do-title h3-title">What we do</h3>
         <p> This initiative will evaluate the potential risks to the Huemul and, consequently, the rest of the area’s biodiversity. The highest risk is from economic activities on private lands, specifically development, livestock raising and logging. The
             project will focus on scientific field research, the establishment of relationships with landowners in the region, and a local education and awareness campaign. The results of these three main objectives will be used to realize the fourth
             and ultimate objective--a Conservation Action Plan for the focal area.</p>
@@ -90,8 +154,8 @@
     <!-- News -->
 
     <section class="news">
-            <div class="container news-container">
-                <h3 class="news-title center-text">News about our Huemul</h3>
+        <h3 class="news-title h3-title">News about our Huemul</h3>
+        <div class="container news-container">
             <div class="row padding-news">
                 <div class="col-lg-4">
                     <div class="card card-news" style="max-width: 600px;">
@@ -105,7 +169,7 @@
                 </div>
                 <div class="col-lg-4">
                     <div class="card card-news" style="max-width: 600px;">
-                         <div class="news-image news-image2"></div>
+                        <div class="news-image news-image2"></div>
                         <div class="card-body">
                             <h5 class="card-title">Rare Andean Deer Found in Chile’s Northern Patagonia</h5>
                             <p class="card-text">Thanks to an alliance between the non-profit Puelo Patagonia...</p>
@@ -115,7 +179,7 @@
                 </div>
                 <div class="col-lg-4">
                     <div class="card card-news" style="max-width: 600px;">
-                         <div class="news-image news-image3"></div>
+                        <div class="news-image news-image3"></div>
                         <div class="card-body">
                             <h5 class="card-title">Virus may have caused mysterious foot disease in Chile’s rare huemul deer</h5>
                             <p class="card-text">Researchers say they believe they have identified the potential...</p>
@@ -125,7 +189,6 @@
                 </div>
             </div>
         </div>
-
     </section>
 
     <!-- /News -->
@@ -133,6 +196,8 @@
     <!-- Donate -->
 
     <section class="donate">
+        <h3 class="donate-title h3-title">Donate</h3>
+
         We will carry out scientific research to increase the understanding of the requirements for threatened species in the wild and in captivity. We will educate and train the public and Vietnamese law enforcement officers to promote positive perceptions and
         attitudes towards wildlife conservation.
     </section>
@@ -142,7 +207,37 @@
     <!-- Contact us -->
 
     <section class="contact-us">
-        Tomás Rogers 143, Puerto Natales, Natales, Región de Magallanes y de la Antártica Chilena, Chile
+        <div class="container-fluid container-contact-us">
+            <h3 class="contact-us-title h3-title">Contact Us</h3>
+            <div class="row row-contact-us">
+                <div class="col">
+                    <div class="center-form">
+                        <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
+                        <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
+                        <textarea rows="5" name="contact-tho" id="contact-tho" class="form-control" placeholder="Message" required></textarea>
+                        <input type="submit" value="submit">
+                    </div>
+                </div>
+            </div>
+
+            <div class="row row-contact-us">
+                <div class="col-lg-6 half-text-contact-us">
+                    <h6>Address:</h6>
+                    <p>Tomás Rogers 143, Puerto Natales, Natales, Región de Magallanes y de la Antártica Chilena, Chile</p>
+                </div>
+                <div class="col-md-6">
+                    <div class="col embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2471.3612402250124!2d-72.50938828422194!3d-51.72642777967169!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xbdafe81bd2e36587%3A0xf2aa24513d21f09d!2sTom%C3%A1s%20Rogers%20143%2C%20Puerto%20Natales%2C%20Natales%2C%20Regi%C3%B3n%20de%20Magallanes%20y%20de%20la%20Ant%C3%A1rtica%20Chilena%2C%20Chile!5e0!3m2!1sen!2sie!4v1568314193847!5m2!1sen!2sie"
+                            frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                    </div>
+                </div>
+
+
+
+            </div>
+        </div>
+
+
+
     </section>
 
     <!-- /Contact us -->
