--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <figure>
                             <img class="half-image" src="./assets/images/about/about1.jpg" alt="Female huemul" ;>
                             <figcaption class="half-image-text image-caption">A female Huemul.
-                                </figcaption>
+                            </figcaption>
                         </figure>
                     </div>
                 </div>
@@ -133,7 +133,15 @@
                     </h4>
                     <p>Steve Irwin</p>
                 </div>
-                <div class="col-12 full-image embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item image-caption" src="https://www.youtube.com/embed/4mleWMusU7U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></iframe>
+            </div>
+            <div class="row row-about">
+                <div class="col-12">
+                    <div class="full-image embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item image-caption" src="https://www.youtube.com/embed/4mleWMusU7U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></iframe>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <figcaption class="full-image-text image-caption">Sectrets of the Chilean Nature. Episode: The Huemul.
+                        </figcaption>
                 </div>
             </div>
         </div>
