justify text fixed, added new font family, deleted logo from navbar

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-md navbar-dark bg-light">
-            <div class="header__logo"></div>
-            <div class="navbar-brand d-none d-lg-block"><strong>The Huemul Organization</strong></div>
+            <div class="navbar-brand">The Huemul Organization</div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -52,7 +51,7 @@
 
     <section class="home background-image" id="home">
         <div class="background-image-quote home-quote">
-            <h3>"There is still a lot left worth fighting for"</h1>
+            <h3><i class="fa fa-quote-left" aria-hidden="true"></i> There is still a lot left worth fighting for <i class="fa fa-quote-right" aria-hidden="true"></i></h1>
                 <p>Jane Goodall</p>
         </div>
     </section>
@@ -148,7 +147,7 @@
         </div>
         <div class="background-image background-image-about">
             <div class="background-image-quote background-quote-about">
-                <h3>"His strength is in his agility. He is defended by the finesse of his senses: the delicate ear, the eye of attentive water, the acute smell ... he lives in the green light of the bushes and has some of the light in his arrow speed."</h1>
+                <h3><i class="fa fa-quote-left" aria-hidden="true"></i> His strength is in his agility. He is defended by the finesse of his senses: the delicate ear, the eye of attentive water, the acute smell ... he lives in the green light of the bushes and has some of the light in his arrow speed. <i class="fa fa-quote-right" aria-hidden="true"></i></h1>
                     <p>Gabriela Mistral</p>
             </div>
         </div>
@@ -197,7 +196,7 @@
         </div>
         <div class="background-image background-image-news">
             <div class="background-image-quote background-quote-news">
-                <h3>"The happiness of the bee and the dolphin is to exist. For man it is to know that and to wonder at it."</h1>
+                <h3><i class="fa fa-quote-left" aria-hidden="true"></i> The happiness of the bee and the dolphin is to exist. For man it is to know that and to wonder at it. <i class="fa fa-quote-left" aria-hidden="true"></i></h1>
                     <p>Jacques Costeau</p>
             </div>
         </div>
