added Monstserrat font family, re-style news-card

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="icon" type="image/png" href="./assets/images/favicon2.png">
     <title>Save The Huemul</title>
@@ -50,6 +51,7 @@
     <!-- Home -->
 
     <section class="home background-image" id="home">
+        <div class="transparent-overlay"></div>
         <div class="background-image-quote home-quote">
             <h3><i class="fa fa-quote-left" aria-hidden="true"></i> There is still a lot left worth fighting for <i class="fa fa-quote-right" aria-hidden="true"></i></h1>
                 <p>Jane Goodall</p>
@@ -86,7 +88,7 @@
                 <div class="col-lg-6">
                     <div class="col-12">
                         <figure>
-                            <img class="half-image" src="./assets/images/about/about1.jpg" alt="Female huemul" ;>
+                            <img class="half-image img-thumbnail" src="./assets/images/about/about1.jpg" alt="Female huemul" ;>
                             <figcaption class="half-image-text image-caption">A female Huemul.
                             </figcaption>
                         </figure>
@@ -113,8 +115,8 @@
                 <div class="col-lg-6">
                     <div class="col-12">
                         <figure>
-                            <img class="half-image" src="./assets/images/about/about3.jpg" alt="Chilean coat of arms" ;>
-                            <figcaption class="half-image-text image-caption">A mother Huemul taking care of her fawn in Tamango National Park, Aysen, Chile.</figcaption>
+                            <img class="half-image img-thumbnail" src="./assets/images/about/about3.jpg" alt="Chilean coat of arms" ;>
+                            <figcaption class="half-image-text image-caption">A father Huemul taking care of her fawn in Torres del Paine National Park, Chile.</figcaption>
                         </figure>
                     </div>
                 </div>
@@ -147,8 +149,8 @@
         </div>
         <div class="background-image background-image-about">
             <div class="background-image-quote background-quote-about">
-                <h3><i class="fa fa-quote-left" aria-hidden="true"></i> His strength is in his agility. He is defended by the finesse of his senses: the delicate ear, the eye of attentive water, the acute smell ... he lives in the green light of the bushes and has some of the light in his arrow speed. <i class="fa fa-quote-right" aria-hidden="true"></i></h1>
-                    <p>Gabriela Mistral</p>
+                <h3><i class="fa fa-quote-left" aria-hidden="true"></i>Education is the Most Powerful weapon which you can use to change the world <i class="fa fa-quote-right" aria-hidden="true"></i></h1>
+                    <p>Nelson Mandela</p>
             </div>
         </div>
     </section>
@@ -196,7 +198,7 @@
         </div>
         <div class="background-image background-image-news">
             <div class="background-image-quote background-quote-news">
-                <h3><i class="fa fa-quote-left" aria-hidden="true"></i> The happiness of the bee and the dolphin is to exist. For man it is to know that and to wonder at it. <i class="fa fa-quote-left" aria-hidden="true"></i></h1>
+                <h3><i class="fa fa-quote-left" aria-hidden="true"></i> The happiness of the bee and the dolphin is to exist. For man it is to know that and to wonder at it. <i class="fa fa-quote-right" aria-hidden="true"></i></h1>
                     <p>Jacques Costeau</p>
             </div>
         </div>
@@ -287,13 +289,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-4">
-                    <h5 class="uppercase center-text">Home</h5>
+                    <a href="#home"><h5 class="uppercase center-text">Home</h5></a>
                 </div>
                 <div class="col-sm-4">
-                    <h5 class="uppercase center-text">Donate</h5>
+                    <a href="#donate"><h5 class="uppercase center-text">Donate</h5></a>
                 </div>
                 <div class="col-sm-4">
-                    <h5 class="uppercase center-text">Social</h5>
+                    <a href="#"><h5 class="uppercase center-text">social</h5></a>
                     <ul class="list-inline social-links center-text">
                         <li class="list-inline-item">
                             <a target="_blank" href="#">
