contact background image, paddings, footer, transitions adjusted

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                 <div class="col-lg-6">
                     <div class="col-12">
                         <figure>
-                            <img class="half-image img-thumbnail" src="./assets/images/donate-image.png" alt="Female huemul with her fawn" ;>
+                            <img class="half-image img-thumbnail" src="./assets/images/donate-image.jpg" alt="Female huemul with her fawn" ;>
                         </figure>
                     </div>
                 </div>
@@ -258,10 +258,14 @@
     <section class="contact-us background-image background-image-contact">
         <div class="transparent-overlay"></div>
         <div class="container container-all container-contact-us" id="contact">
-            <h3 class="contact-us-title h3-title">Contact Us</h3>
-            <hr class="hr-blue">
+            <div class="row">
+                <div class="col-12">
+                    <h3 class="contact-us-title h3-title">Contact Us</h3>
+                    <hr class="hr-blue">
+                </div>
+            </div>
             <div class="row row-contact-us">
-                <div class="col">
+                <div class="col-12">
                     <div class="center-form">
                         <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
                         <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
@@ -278,7 +282,7 @@
                     <h6>Phone Number:</h6>
                     <p>+56 (61) 241 1260</p>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 half-map-padding">
                     <div class="col embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item half-map img-thumbnail" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2471.3612402250124!2d-72.50938828422194!3d-51.72642777967169!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xbdafe81bd2e36587%3A0xf2aa24513d21f09d!2sTom%C3%A1s%20Rogers%20143%2C%20Puerto%20Natales%2C%20Natales%2C%20Regi%C3%B3n%20de%20Magallanes%20y%20de%20la%20Ant%C3%A1rtica%20Chilena%2C%20Chile!5e0!3m2!1sen!2sie!4v1568314193847!5m2!1sen!2sie"
                             frameborder="0" style="border:0;" allowfullscreen=""></iframe>
                     </div>
@@ -309,9 +313,6 @@
                     </a>
                 </div>
                 <div class="col-sm-4">
-                    <a href="#">
-                        <h5 class="uppercase center-text footer-text">social</h5>
-                    </a>
                     <ul class="list-inline social-links center-text">
                         <li class="list-inline-item">
                             <a target="_blank" href="#">
@@ -338,6 +339,7 @@
                         </a>
                         </li>
                     </ul>
+
                 </div>
             </div>
         </div>
