HTML validated using validator.w3.org

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 
     <section class="home background-image" id="home">
         <div class="background-image-quote home-quote">
-            <h3><i class="fa fa-quote-left" aria-hidden="true"></i> There is still a lot left worth fighting for <i class="fa fa-quote-right" aria-hidden="true"></i></h1>
-                <p>Jane Goodall</p>
+            <h3><i class="fa fa-quote-left" aria-hidden="true"></i> There is still a lot left worth fighting for <i class="fa fa-quote-right" aria-hidden="true"></i></h3>
+            <p>Jane Goodall</p>
         </div>
     </section>
 
@@ -90,7 +90,7 @@
                 <div class="col-lg-6">
                     <div class="col-12">
                         <figure>
-                            <img class="half-image img-thumbnail" src="./assets/images/about/about1.jpg" alt="Female huemul" ;>
+                            <img class="half-image img-thumbnail" src="./assets/images/about/about1.jpg" alt="Female huemul">
                             <figcaption class="half-image-text image-caption">A female Huemul.
                             </figcaption>
                         </figure>
@@ -117,8 +117,8 @@
                 <div class="col-lg-6">
                     <div class="col-12">
                         <figure>
-                            <img class="half-image img-thumbnail" src="./assets/images/about/about3.jpg" alt="Chilean coat of arms" ;>
-                            <figcaption class="half-image-text image-caption">A father Huemul taking care of her fawn in Torres del Paine National Park, Chile.</figcaption>
+                            <img class="half-image img-thumbnail" src="./assets/images/about/about3.jpg" alt="Chilean coat of arms">
+                            <figcaption class="half-image-text image-caption">A father Huemul and his fawn in Torres del Paine National Park, Chile.</figcaption>
                         </figure>
                     </div>
                 </div>
@@ -127,9 +127,10 @@
             <div class="row row-about">
                 <div class="col-lg-6 half-text">
                     <h5>Protecting the South Andean huemul has finally become a priority</h5>
-                    <pIt is only since 2010 that both Chile and Argentina have taken to working cooperatively to prevent the tiny population of of South Andean huemul from dwindling any further. <br> Measures aimed at addressing illegal hunting and habitat degradation, amongst other critical threats, have been introduced to tackle the issue, and both countries hope to bring this emblematic creature back from the brink of extinction.
-
-                        </p>
+                    <p>It is only since 2010 that both Chile and Argentina have taken to work cooperatively to prevent the tiny population of South Andean huemul from dwindling any further.
+                        <br> Measures aimed at addressing illegal hunting and habitat degradation, amongst other critical threats, have been introduced to tackle the issue, and both countries hope to bring this emblematic creature back from the brink
+                        of extinction.
+                    </p>
                 </div>
                 <div class="col-lg-6 quote-about">
                     <h4>"If we can teach people about wildlife, they will be touched. Share my wildlife with me. Because humans want to save things that they love".
@@ -140,19 +141,18 @@
             <hr class="hr-light-blue">
             <div class="row row-about">
                 <div class="col-12">
-                    <div class="full-image embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item image-caption" src="https://www.youtube.com/embed/4mleWMusU7U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></iframe>
+                    <div class="full-image embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item image-caption" src="https://www.youtube.com/embed/4mleWMusU7U" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="col-12">
-                    <figcaption class="full-image-text image-caption">Sectrets of the Chilean Nature. Episode: The Huemul.
-                    </figcaption>
+                    <div class="full-image-text image-caption">Sectrets of the Chilean Nature. Episode: The Huemul.
+                    </div>
                 </div>
             </div>
         </div>
-        </div>
         <div class="background-image background-image-about">
             <div class="background-image-quote background-quote-about">
-                <h3><i class="fa fa-quote-left" aria-hidden="true"></i>Education is the Most Powerful weapon which you can use to change the world <i class="fa fa-quote-right" aria-hidden="true"></i></h1>
+                <h3><i class="fa fa-quote-left" aria-hidden="true"></i>Education is the Most Powerful weapon which you can use to change the world <i class="fa fa-quote-right" aria-hidden="true"></i></h3>
                     <p>Nelson Mandela</p>
             </div>
         </div>
@@ -207,8 +207,8 @@
         </div>
         <div class="background-image background-image-news">
             <div class="background-image-quote background-quote-news">
-                <h3><i class="fa fa-quote-left" aria-hidden="true"></i> The happiness of the bee and the dolphin is to exist. For man it is to know that and to wonder at it. <i class="fa fa-quote-right" aria-hidden="true"></i></h1>
-                    <p>Jacques Costeau</p>
+                <h3><i class="fa fa-quote-left" aria-hidden="true"></i> The happiness of the bee and the dolphin is to exist. For man it is to know that and to wonder at it. <i class="fa fa-quote-right" aria-hidden="true"></i></h3>
+                <p>Jacques Costeau</p>
             </div>
         </div>
     </section>
@@ -242,7 +242,7 @@
                 <div class="col-lg-6">
                     <div class="col-12">
                         <figure>
-                            <img class="half-image img-thumbnail" src="./assets/images/donate-image.jpg" alt="Female huemul with her fawn" ;>
+                            <img class="half-image img-thumbnail" src="./assets/images/donate-image.jpg" alt="Female huemul with her fawn">
                         </figure>
                     </div>
                 </div>
@@ -284,7 +284,7 @@
                 </div>
                 <div class="col-lg-6 half-map-padding">
                     <div class="col embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item half-map img-thumbnail" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2471.3612402250124!2d-72.50938828422194!3d-51.72642777967169!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xbdafe81bd2e36587%3A0xf2aa24513d21f09d!2sTom%C3%A1s%20Rogers%20143%2C%20Puerto%20Natales%2C%20Natales%2C%20Regi%C3%B3n%20de%20Magallanes%20y%20de%20la%20Ant%C3%A1rtica%20Chilena%2C%20Chile!5e0!3m2!1sen!2sie!4v1568314193847!5m2!1sen!2sie"
-                            frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                            style="border:0;" allowfullscreen=""></iframe>
                     </div>
                 </div>
 
