--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-md navbar-dark bg-light">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-light">
             <div class="navbar-brand">The Huemul Organization</div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -267,10 +267,12 @@
             <div class="row row-contact-us">
                 <div class="col-12">
                     <div class="center-form">
+                        <form>
                         <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
                         <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
                         <textarea rows="5" name="contact-tho" id="contact-tho" class="form-control" placeholder="Message" required></textarea>
                         <input type="submit" class="btn btn-primary" value="Send Message">
+                        </form>
                     </div>
                 </div>
             </div>
